# AGiXT-Rust

./: README.md
server/: Cargo.toml
server/src/: Providers.rs  api_client.rs  app.rs  db_connection.rs  default.rs  lib.rs  models.rs  providers_ref.rs  start.rs  utils.rs
server/src/db/: agent.rs
server/src/endpoint/: agent.rs  mod.rs  provider.rs
server/src/fb/: agent.rs
server/src/providers/: gpt4free.rs  mod.rs  provider.rs
src/: main.rs
