[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2.2"
serde_json = "1"
pretty_env_logger = "0.5"
lazy_static = "1.4"
async-trait = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.1", features = ["postgres"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["serde", "v4"] }
